Aula do dia 13/06 v1

--- a/jupyter.ipynb
+++ b/jupyter.ipynb
@@ -569,6 +569,118 @@
     "print( prod_esc(a, c) ) # 13\n",
     "print( prod_esc(b, c) ) # -10"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jim é VENDEDOR e ganha R$4200.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Algoritmo de pesquisa em uma tabela.\n",
+    "\n",
+    "\n",
+    "tabela = [\n",
+    "    [\"Angela\", \"Administração\", 2345, 3700.00],\n",
+    "    [\"Toby\", \"RH\", 4852, 3500.00],\n",
+    "    [\"Jim\", \"Vendas\", 1875, 4200.00]\n",
+    "]\n",
+    "\n",
+    "\n",
+    "for linha in tabela:\n",
+    "    nome = linha[0]\n",
+    "    salario = linha[3]\n",
+    "    setor = linha[1]\n",
+    "    if setor == \"Vendas\":\n",
+    "        print(f\"{nome} é VENDEDOR e ganha R${salario:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A matriz tem 2 linhas e 3 colunas\n",
+      "Coluna 1: 1, 4 \n",
+      "Coluna 2: 2, 5 \n",
+      "Coluna 3: 3, 6 \n",
+      "A matriz é quadrada? False\n"
+     ]
+    }
+   ],
+   "source": [
+    "## ENTENDENDO MATRIZES\n",
+    "\n",
+    "def spec_matriz(matriz):\n",
+    "    print(f\"A matriz tem {len(matriz)} linhas e {len(matriz[0])} colunas\")\n",
+    "\n",
+    "    print(f\"Coluna 1: {matriz[0][0]}, {matriz[1][0]} \")\n",
+    "    print(f\"Coluna 2: {matriz[0][1]}, {matriz[1][1]} \")\n",
+    "    print(f\"Coluna 3: {matriz[0][2]}, {matriz[1][2]} \")\n",
+    "\n",
+    "    if len(matriz) == len(matriz[0]):\n",
+    "        quadrada = True\n",
+    "    else:\n",
+    "        quadrada = False\n",
+    "\n",
+    "    print(f\"A matriz é quadrada? {quadrada}\")\n",
+    "\n",
+    "\n",
+    "M = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6]\n",
+    "]\n",
+    "\n",
+    "spec_matriz(M)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A soma da matriz ((1, 2, 3), (4, 5, 6), (7, 8, 9)) é de 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "## SOMA DE MATRIZES\n",
+    "\n",
+    "def soma_Matriz(matriz):\n",
+    "    soma = 0\n",
+    "    for linha in matriz:\n",
+    "        soma += sum(linha)\n",
+    "    \n",
+    "    print(f\"A soma da matriz {matriz} é de {soma}\")\n",
+    "\n",
+    "\n",
+    "M = ((1, 2, 3), (4, 5, 6), (7, 8, 9))\n",
+    "\n",
+    "soma_Matriz(M)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
