FIM DA AULA 13/06

--- a/jupyter.ipynb
+++ b/jupyter.ipynb
@@ -2,7 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FUNÇÕES GERAIS\n",
+    "\n",
+    "def barra(tamanho, caractere=\"*\", exer=0):\n",
+    "    \"\"\"Imprime uma barra de caracteres e o número do exercicio.\n",
+    "    (int, str, int) -> None\n",
+    "    \"\"\"\n",
+    "    print(caractere * tamanho)\n",
+    "    if exer != 0: print(\" \"*tamanho,f\">> EXERCÍCIO {exer} <<\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +27,7 @@
        "523.5987755982989"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,10 +693,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A densidade dessa matriz é 22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# exercicio 5: Densidade de uma matriz\n",
+    "\n",
+    "def densidade(matriz):\n",
+    "    densidade = 0 \n",
+    "    for linha in matriz:\n",
+    "        for número in linha:\n",
+    "            if número != 0:\n",
+    "                densidade += número\n",
+    "    print(f\"A densidade dessa matriz é {densidade}\")\n",
+    "\n",
+    "\n",
+    "M = [\n",
+    "    [1, 2, 3], [6, 6, 0], [0, 0, 4]\n",
+    "]\n",
+    "\n",
+    "densidade(M)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ". . . . . . . . . \n",
+      ". . . . . . . . . \n",
+      ". . . . . . . . . \n",
+      ". . . . . . . . . \n",
+      ". . . . . . . . . \n",
+      ". . . . . . . . . \n",
+      ". . . . . . . . . \n",
+      ". . . . . . . . . \n",
+      ". . . . . . . . . \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Criando um tabuleiro de sudoko\n",
+    "\n",
+    "def new_tab():\n",
+    "\n",
+    "    t = []\n",
+    "    for i in range(9):\n",
+    "        linha = [0]*9\n",
+    "        t.append(linha)\n",
+    "    return t\n",
+    "\n",
+    "\n",
+    "def view_tab(tab):\n",
+    "    for linha in tab:\n",
+    "        for n in linha:\n",
+    "            if n == 0:\n",
+    "                print('.', end=\" \")\n",
+    "            else:\n",
+    "                print(n, end=' ')\n",
+    "        print('')\n",
+    "\n",
+    "\n",
+    "\n",
+    "tabuleiro = new_tab()\n",
+    "view_tab(tabuleiro)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bowser          42.7\n",
+      "Mario           36.2\n",
+      "Luigi           57.2\n",
+      "Peach           29.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercício 1. Dicionário de kart.\n",
+    "# No papel, crie um dicionário para o exemplo de corredores de kart da \n",
+    "# primeira página. O nome do corredor será a chave, e o tempo de volta será \n",
+    "# conteúdo. Depois apague a entrada de Bowser e imprima os tempos de Mario \n",
+    "# e Peach. Utilize o operador in para testar se Luigi está no dicionário.\n",
+    "\n",
+    "\n",
+    "corredores = {'Bowser': 42.7, 'Mario': 36.2, 'Luigi': 57.2, 'Peach': 29.5}\n",
+    "\n",
+    "for corredor in corredores:\n",
+    "    print(f\"{corredor:<15} {corredores[corredor]}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 7 \n",
+      "0 5 1 \n",
+      "\u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \n",
+      "0 4 0 \n",
+      "0 0 8 \n",
+      "\u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \n",
+      "0 4 7 \n",
+      "0 5 9 \n",
+      "\u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \n",
+      "[[0, 4, 7], [0, 5, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AULA DE MATRIZ (13/06)\n",
+    "# Exercicio 1\n",
+    "\n",
+    "def generate_matriz(nlin, ncol):\n",
+    "    \"\"\"Cria uma matriz com um número determinado de colunas e linhas.\n",
+    "    (int, int) -> list\n",
+    "    \"\"\"\n",
+    "    M = []\n",
+    "    for i in range(nlin):\n",
+    "        M.append([0]*ncol)\n",
+    "        \n",
+    "    return M\n",
+    "\n",
+    "\n",
+    "def show(matriz):\n",
+    "    for linha in matriz:\n",
+    "        for coluna in linha:\n",
+    "            print(coluna, end=\" \")\n",
+    "        print()\n",
+    "    print(\"\\033[92m#\\033[0m \"*(len(matriz[0])))\n",
+    "\n",
+    "\n",
+    "def msum(A, B):\n",
+    "    '''Retorna a soma de 2 matrizes. \\n\n",
+    "    (list, list) -> list'''\n",
+    "    if len(A) == len(B) and len(A[0]) == len(B[0]):\n",
+    "\n",
+    "        lin = len(A)\n",
+    "        col = len(B[0])\n",
+    "\n",
+    "        c = generate_matriz(lin, col)\n",
+    "        for linha in range(lin):\n",
+    "            for coluna in range(col):\n",
+    "                c[linha][coluna] = A[linha][coluna] + B[linha][coluna]\n",
+    "        return c\n",
+    "    \n",
+    "\n",
+    "matriz1 = generate_matriz(2, 3)\n",
+    "matriz2 = generate_matriz(2, 3)\n",
+    "\n",
+    "matriz2[1][2] = 8\n",
+    "matriz1[1][1] = 5\n",
+    "matriz2[0][1] = 4\n",
+    "matriz1[0][2] = 7\n",
+    "matriz1[1][2] = 1\n",
+    "\n",
+    "show(matriz1)\n",
+    "show(matriz2)\n",
+    "soma = msum(matriz1, matriz2)\n",
+    "\n",
+    "show(soma)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "******************************\n",
+      "  MATRIX CALCULATOR\n",
+      "******************************\n",
+      "5 5 5 \n",
+      "5 5 5 \n",
+      "\u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \n",
+      "[[5, 5, 5], [5, 5, 5]]\n",
+      "[[1.0, 1.0, 1.0], [1.0, 1.0, 1.0]]\n",
+      "6.0 6.0 6.0 \n",
+      "6.0 6.0 6.0 \n",
+      "\u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \u001b[92m#\u001b[0m \n",
+      "[[6.0, 6.0, 6.0], [6.0, 6.0, 6.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# AULA DE MATRIZ (13/06)\n",
+    "# Exercicio 2\n",
+    "\n",
+    "barra(30)\n",
+    "print(\"  MATRIX CALCULATOR\")\n",
+    "barra(30)\n",
+    "\n",
+    "M = []\n",
+    "while True:\n",
+    "    linha = input(\"DIGITE: \")\n",
+    "    if linha == '':\n",
+    "        break\n",
+    "    numeros = linha.split()\n",
+    "    for i in range(len(numeros)):\n",
+    "        numeros[i] = int(numeros[i])\n",
+    "    M.append(numeros)\n",
+    "\n",
+    "show(M)\n",
+    "print(M)\n",
+    "\n",
+    "N = []\n",
+    "while True:\n",
+    "    linha = input(\"DIGITE: \")\n",
+    "    if linha == '':\n",
+    "        break\n",
+    "    numeros = linha.split()\n",
+    "    numeros = list(map(int, numeros))\n",
+    "    N.append(numeros)\n",
+    "\n",
+    "\n",
+    "print(N)\n",
+    "# show(N)\n",
+    "\n",
+    "show(msum(M, N))\n",
+    "print(msum(M, N))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
