lista 8 sobre dicionarios

--- a/jupyter.ipynb
+++ b/jupyter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "    (int, str, int) -> None\n",
     "    \"\"\"\n",
     "    print(caractere * tamanho)\n",
-    "    if exer != 0: print(\" \"*tamanho,f\">> EXERCÍCIO {exer} <<\\n\")"
+    "    if exer != 0: print(f\"{f\">> EXERCÍCIO {exer} <<\\n\":>{tamanho*len(caractere)}}\")"
    ]
   },
   {
@@ -775,32 +775,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bowser          42.7\n",
-      "Mario           36.2\n",
-      "Luigi           57.2\n",
-      "Peach           29.5\n"
+      "42.7            \n",
+      "36.2            \n",
+      "57.2            \n",
+      "29.5            \n",
+      "[42.7, 36.2, 57.2, 29.5]\n"
      ]
     }
    ],
    "source": [
-    "# Exercício 1. Dicionário de kart.\n",
-    "# No papel, crie um dicionário para o exemplo de corredores de kart da \n",
-    "# primeira página. O nome do corredor será a chave, e o tempo de volta será \n",
-    "# conteúdo. Depois apague a entrada de Bowser e imprima os tempos de Mario \n",
-    "# e Peach. Utilize o operador in para testar se Luigi está no dicionário.\n",
+    "# Testes sobre dict\n",
     "\n",
     "\n",
     "corredores = {'Bowser': 42.7, 'Mario': 36.2, 'Luigi': 57.2, 'Peach': 29.5}\n",
     "\n",
-    "for corredor in corredores:\n",
-    "    print(f\"{corredor:<15} {corredores[corredor]}\")\n",
+    "for nome, tempo in corredores.items():\n",
+    "    print(f\"{nome:<15} {tempo}\")\n",
+    "\n",
+    "tempoMin = min(list(corredores.values()))\n",
+    "tempoMax = max(list(corredores.values()))\n",
+    "\n",
     "\n"
    ]
   },
@@ -944,6 +945,171 @@
     "\n",
     "show(msum(M, N))\n",
     "print(msum(M, N))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------\n",
+      "                      >> EXERCÍCIO 1 <<\n",
+      "\n",
+      "VENDEDOR         MÉDIA DE VENDAS    PERIODO\n",
+      "Amilton          R$3476.67         3 meses!\n",
+      "Jefferson        R$3623.33         3 meses!\n",
+      "Eliane           R$3363.33         3 meses!\n",
+      "Gerusa           R$3636.67         3 meses!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EXERCÍCIO 1 \n",
+    "# ===========\n",
+    "barra(40, \"-\", 1)\n",
+    "# O dicionário a seguir guarda as vendas de cada vendedor de uma loja de sapatos\n",
+    "# nos três primeiros meses do ano:\n",
+    "vendas = {\n",
+    "   \"Amilton\": [3550.00, 2780.00, 4100.00],\n",
+    "   \"Jefferson\": [3760.00, 3300.00, 3810.00],\n",
+    "   \"Eliane\": [3460.00, 2580.00, 4050.00],\n",
+    "   \"Gerusa\": [4540.00, 1780.00, 4590.00]\n",
+    "}\n",
+    "# Escreva uma função que receba um dicionário desse tipo e mostre a média de\n",
+    "# vendas de cada vendedor (não esqueça do nome também). Para iterar no\n",
+    "# dicionário, utilize a função dict.items().\n",
+    "\n",
+    "def media_vendas(dicio):\n",
+    "    \"\"\"Cria uma tabela de média de valores de chaves de um certo dicionario.\\n (dict) -> None\"\"\"\n",
+    "\n",
+    "    print(f\"{\"VENDEDOR\":<15}  {\"MÉDIA DE VENDAS\":<15} {\"PERIODO\":>10}\")\n",
+    "    for nome, venda in dicio.items():\n",
+    "        media = sum(venda) / len(venda)\n",
+    "        print(f\"{nome:<15}  R${media:<15.2f} {f\"{len(venda)} meses!\":>5}\")\n",
+    "\n",
+    "\n",
+    "media_vendas(vendas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n",
+      "                      >> EXERCÍCIO 2 <<\n",
+      "\n",
+      "987 em números romanos é CMLXXXVII\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EXERCÍCIO 2\n",
+    "# ===========\n",
+    "barra(40, \"=\", 2)\n",
+    "# Escreva uma função que converta números inteiros entre 0 e 999 para algarismos\n",
+    "# romanos, usando os três dicionários abaixo. Os nomes dos dicionários estão em\n",
+    "# maiúsculas para indicar que não devemos alterá-los (são constantes).\n",
+    "UNIDADES = {\n",
+    "   0:'',  1:'I',  2:'II',  3:'III',  4:'IV',\n",
+    "   5:'V', 6:'VI', 7:'VII', 8:'VIII', 9:'IX'}\n",
+    "DEZENAS = {\n",
+    "   0:'',  1:'X',  2:'XX',  3:'XXX',  4:'XL',\n",
+    "   5:'L', 6:'LX', 7:'LXX', 8:'LXXX', 9:'XC'}\n",
+    "CENTENAS = {\n",
+    "   0:'',  1:'C',  2:'CC',  3:'CCC',  4:'CD',\n",
+    "   5:'D', 6:'DC', 7:'DCC', 8:'DCCC', 9:'CM'}\n",
+    "# CARA não sei se fiz isso de uma boa forma não kkkkkkkk \n",
+    "# mas deu certo po :) me quebrou esse exericcio kkkk\n",
+    "\n",
+    "def roman_convert(number):\n",
+    "   \"\"\"Converte números inteiros em números romanos. \\n (int) -> str\"\"\"\n",
+    "\n",
+    "\n",
+    "   # Coloquei essa condicional, não sei se podia mas não tem nd escrito q não podia... \n",
+    "   # Minha função só funciona para número menores que 1000\n",
+    "   if number > 999: \n",
+    "      return \"NÚMERO GRANDE DEMAIS!\"\n",
+    "   numero = str(number)   \n",
+    "\n",
+    "   # Fiz um sisteminha pra transformar cada algarismo em uma chave pro dicionario kkkkkkk                                              \n",
+    "   c = d = u = 0\n",
+    "   if number > 99:\n",
+    "      c = int(numero[-3])\n",
+    "   if number > 9:\n",
+    "      d = int(numero[-2])\n",
+    "   u = int(numero[-1])\n",
+    "\n",
+    "\n",
+    "   new_number = f\"{CENTENAS[c]}{DEZENAS[d]}{UNIDADES[u]}\"\n",
+    "   return new_number\n",
+    "\n",
+    "\n",
+    "n = 987\n",
+    "print(f\"{n} em números romanos é {roman_convert(n)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ai': 3, 'se': 2, 'eu': 2, 'te': 2, 'pego': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EXERCÍCIO 3\n",
+    "# ===========\n",
+    "# Contar palavras é um recurso importante para análise semântica de textos, \n",
+    "# sendo usada em conjunto com técnicas de Inteligência Artificial. Construa \n",
+    "# uma função que receba uma string e retorne um dicionário com o número de \n",
+    "# ocorrências de cada palavra. Por exemplo:\n",
+    "#\n",
+    "#    conta_palavras(\"Ai se eu te pego, ai ai se eu te pego\")\n",
+    "#    # retorna: {'ai': 3, 'se': 2, 'eu': 2, 'te': 2, 'pego': 2}\n",
+    "#\n",
+    "# Repare que não importa se a palavra está em maiúscula ou minúscula.\n",
+    "# Dica: Comece com um dicionário vazio e faça um laço iterando sobre\n",
+    "# cada palavra (usando str.split()).\n",
+    "\n",
+    "\n",
+    "texto = \"Ai se eu te pego, ai ai se eu te pego!\"\n",
+    "\n",
+    "def conta_palavras(txt):\n",
+    "   \"\"\"Conta as palavras de uma string \\n (str) -> dict\"\"\"\n",
+    "\n",
+    "   del_carct = \",!.;~]´[]{}?\"\n",
+    "   contagem = {}\n",
+    "   txt = txt.lower()\n",
+    "   txt = txt.split()\n",
+    "   for word in txt:\n",
+    "      for char in del_carct:\n",
+    "        word = word.replace(char, \"\")\n",
+    "      if word in contagem:\n",
+    "         contagem[f'{word}'] += 1\n",
+    "      else:\n",
+    "         contagem[f'{word}'] = 1\n",
+    "         \n",
+    "   print(contagem)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "conta_palavras(texto)\n",
     "\n"
    ]
   }
